# Super_Z80

./: CMakeLists.txt  PHASE0_DONE.md  PHASE10_COMPLETE.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  PHASE6_COMPLETE.md  PHASE8_COMPLETE.md  PHASE9_COMPLETE.md  imgui.ini
cmake/: FetchImGui.cmake  FetchSDL2.cmake  Sanitizers.cmake  Warnings.cmake
docs/design/: phase2_bus_validation_tests.md  super_z280_hardware_specification.md  super_z80_diagnostic_cartridge_rom_spec.md  super_z80_emulation_timing_model.md  super_z80_emulator_architecture.md  super_z80_emulator_bringup_checklist.md  super_z80_hardware_specification.md  super_z80_io_register_map_skeleton.md  super_z80_project_glossary.md  super_z80_project_instructions.md
docs/hardware/industrial_design/: README.md
docs/phases/: phase10_instructions.md  phase11_instructions.md  phase12_instructions.md  phase4_instructions.md  phase5_completion_summary.md  phase5_instructions.md  phase6_instructions.md  phase7_instructions.md  phase8_instructions.md  phase9_instructions.md
roms/diag_cart/: README.md
roms/diag_cart/src/: diag_cart.asm  hw.inc  palette.inc  tilemap.inc  tiles.inc
roms/phase10/: Makefile  test_plane_b.asm
roms/phase11/: Makefile  test_sprites.asm
roms/phase12/: Makefile  build_rom.py  test_audio.asm
roms/phase4/: README.md  test_irq.asm
roms/phase5/: README.md  test_vblank.asm  test_vblank_masked.asm
roms/phase6/: README.md  test_dma.asm
roms/phase7/: test_ppu.asm
roms/phase8/: test_palette.asm
src/: main.cpp
src/app/: App.cpp  App.h  InputHost.cpp  InputHost.h  SDLAudioDevice.cpp  SDLAudioDevice.h  SDLHost.cpp  SDLHost.h  TimeSource.cpp  TimeSource.h  VideoPresenter.cpp  VideoPresenter.h
src/console/: SuperZ80Console.cpp  SuperZ80Console.h
src/core/: config.h  types.h
src/core/log/: Logger.cpp  Logger.h  Trace.cpp  Trace.h
src/core/util/: Assert.h  NonCopyable.h
src/cpu/: Z80Cpu.cpp  Z80Cpu.h  Z80CpuStub.cpp  Z80CpuStub.h
src/debugui/: DebugUI.cpp  DebugUI.h
src/debugui/panels/: PanelAPU.cpp  PanelAPU.h  PanelBus.cpp  PanelBus.h  PanelCPU.cpp  PanelCPU.h  PanelCartridge.cpp  PanelCartridge.h  PanelDMA.cpp  PanelDMA.h  PanelDiagnostics.cpp  PanelDiagnostics.h  PanelIRQ.cpp  PanelIRQ.h  PanelInput.cpp  PanelInput.h  PanelPPU.cpp  PanelPPU.h  PanelScheduler.cpp  PanelScheduler.h
src/devices/apu/: APU.cpp  APU.h  AudioRingBuffer.cpp  AudioRingBuffer.h  PCM2Ch.cpp  PCM2Ch.h  SN76489_PSG.cpp  SN76489_PSG.h  YM2151_OPM.cpp  YM2151_OPM.h
src/devices/bus/: Bus.cpp  Bus.h  BusTypes.h
src/devices/cart/: Cartridge.cpp  Cartridge.h
src/devices/dma/: DMAEngine.cpp  DMAEngine.h
src/devices/input/: InputController.cpp  InputController.h
src/devices/io/: IODevice.cpp  IODevice.h
src/devices/irq/: IRQController.cpp  IRQController.h
src/devices/ppu/: PPU.cpp  PPU.h
src/devices/scheduler/: Scheduler.cpp  Scheduler.h
src/emulator/bus/: BusTypes.h  IBus.h  Phase1Bus.cpp  Phase1Bus.h  Phase2Bus.cpp  Phase2Bus.h
src/emulator/cart/: Phase2Cartridge.cpp  Phase2Cartridge.h
src/emulator/cpu/: IZ80Cpu.h  Z80ExCpu.cpp  Z80ExCpu.h  Z80ExCpuPhase2.cpp  Z80ExCpuPhase2.h
src/emulator/io/: IODevice.cpp  IODevice.h
src/tests/: bus_phase2_tests.cpp  cpu_phase1_determinism.cpp  irq_phase4_tests.cpp
tests/roms/phase2/: Makefile  build_roms.py  io_stub_test.asm  open_bus_test.asm  ram_rw_test.asm  reset_bank0_test.asm  unmapped_write_test.asm
